<?xml version="1.0"?>
<package>
  <name>transparent_object_reconstruction</name>
  <version>0.0.1</version>
  <description>Reconstruct transparent objects from their occlusion gathered from different poses</description>
  <author>Sven Albrecht</author>
  <maintainer email="sven.albrecht@uni-osnabrueck.de">Sven Albrecht</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>ecto</run_depend>
  <run_depend>ecto_pcl</run_depend>
  <run_depend>ecto_ros</run_depend>
  <!--  <run_depend>uos_ecto_cells</run_depend> -->
</package>
